--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/* style.css */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+
+
 body {
     font-family: 'Roboto', sans-serif;
 }
@@ -5,6 +9,13 @@ body {
 .text-decoration-none{
     font-family: 'Poppins',sans-serif;
     font-size: 16px;
+    font-weight: 400;
+    line-height: 15px;
+
+}
+.text-bold{
+    font-family: 'Poppins',sans-serif;
+    font-size: 24px;
     font-weight: 400;
     line-height: 24px;
 
